--- a/env.ggsashimi.yaml
+++ b/env.ggsashimi.yaml
@@ -7,4 +7,5 @@ dependencies:
     - r-base=3.6.3
     - r-ggplot2=3.3.3
     - r-data.table
-    - r-gridextra pysam
+    - r-gridextra
+    - pysam
