fix bugs in rules.plot_sashimi

--- a/env.ggsashimi.yaml
+++ b/env.ggsashimi.yaml
@@ -3,9 +3,11 @@ channels:
     - r
     - bioconda
 dependencies:
+    - bedtools
     - python=2.7
     - r-base=3.6.3
     - r-ggplot2=3.3.3
     - r-data.table
     - r-gridextra
     - pysam
+    - samtools
