--- a/env.yaml
+++ b/env.yaml
@@ -4,6 +4,8 @@ channels:
     - bioconda
 dependencies:
     - bioconductor-genomicfeatures
+    - bioconductor-genomicranges
+    - bioconductor-gviz
     - bioconductor-drimseq
     - bioconductor-edger
     - bioconductor-dexseq
@@ -24,6 +26,7 @@ dependencies:
     - r-data.table
     - r-dplyr
     - r-gridextra
+    - r-pafr
     - r-pheatmap
     - r-tidyr
     - pysam
