--- a/env.yaml
+++ b/env.yaml
@@ -11,6 +11,10 @@ dependencies:
     - bioconductor-dexseq
     - bioconductor-stager
     - bioconductor-txdbmaker
+    - bioconductor-txdb.hsapiens.ucsc.hg19.knowngene
+    - bioconductor-txdb.hsapiens.ucsc.hg38.knowngene
+    - txdb.mmusculus.ucsc.mm9.knowngene
+    - txdb.mmusculus.ucsc.mm10.knowngene
     - deeptools
     - gffcompare
     - gffread
