--- a/env.yaml
+++ b/env.yaml
@@ -13,8 +13,8 @@ dependencies:
     - bioconductor-txdbmaker
     - bioconductor-txdb.hsapiens.ucsc.hg19.knowngene
     - bioconductor-txdb.hsapiens.ucsc.hg38.knowngene
-    - txdb.mmusculus.ucsc.mm9.knowngene
-    - txdb.mmusculus.ucsc.mm10.knowngene
+    - bioconductor-txdb.mmusculus.ucsc.mm9.knowngene
+    - bioconductor-txdb.mmusculus.ucsc.mm10.knowngene
     - deeptools
     - gffcompare
     - gffread
