--- a/env.yaml
+++ b/env.yaml
@@ -3,6 +3,7 @@ channels:
     - r
     - bioconda
 dependencies:
+    - altair
     - bioconductor-genomicfeatures
     - bioconductor-genomicranges
     - bioconductor-gviz
