--- a/env.yaml
+++ b/env.yaml
@@ -33,6 +33,7 @@ dependencies:
     - r-gridextra
     - r-pafr
     - r-pheatmap
+    - r-rcircos
     - r-tidyr
     - pysam
     - python ~= 3.11
